<resources>
    <string name="app_name">Cumulus</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter" >Enter</string>
    <string name="User">User</string>
    <string name="Curp">CURP</string>
    <string name="password">Password</string>
    <string name="mensaje_error">Usuario o contrase\u00F1a incorrecto(s)</string>
    <string name="user">Usuario</string>
    <string name="inicio">Inicio</string>
    <string name="citas">Citas</string>
    <string name="recetas">Recetas</string>
    <string name="historia_clinica">Historia Cl\u00EDnica</string>
    <string name="alergias">Alergias</string>
    <string name="diagnos">Diagn\u00F3sticos</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="Confpassword">Confirmar Password</string>
    <string name="logotu">Cerrar Sesion</string>
</resources>
