<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:layout_above="@+id/password"
        android:layout_marginBottom="39dp"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:hint="@string/User" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:phoneNumber="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/enter"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:theme="@style/Base.V21.Theme.AppCompat.Light" />
</RelativeLayout>