<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="?attr/colorPrimary"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_height="fill_parent"
        android:touchscreenBlocksFocus="false">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="fill_parent">

        </FrameLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView"
            android:src="@drawable/icon"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Registrarse"
            android:id="@+id/lblRegistry"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserName"
            android:hint="@string/User"
            android:theme="@style/EditTextStyle"
            android:textIsSelectable="false"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextStyle"
            android:hint="@string/Curp"
            android:id="@+id/txtCurp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:theme="@style/EditTextStyle"
            android:ems="10"
            android:id="@+id/password"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Confpassword"
            android:theme="@style/EditTextStyle"
            android:ems="10"
            android:id="@+id/passwordConfirm"
            android:gravity="center"/>



        <ImageButton
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_gravity="center"
            android:text="Registrarse"
            android:background="@drawable/check"
            android:adjustViewBounds="false"
            android:layout_centerHorizontal="true"
            android:id="@+id/registrarse"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txtError"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</RelativeLayout>
